--- a/assets/css/4-page-layouts/_articles.sass
+++ b/assets/css/4-page-layouts/_articles.sass
@@ -1,4 +1,9 @@
 
+#articles-intro-section
+   @extend .intro-section
+   background: $medium-teal
+   h1
+      padding-left: 4px
 .articles
    .section-parent
       position: relative
@@ -9,66 +14,91 @@
       //&:nth-child(1)
          background: $soft-gray
 
+
+      // .wrapper
+      //    section
+      //       color: $dark-text
+      //       padding: 15px 40px 0px
+      //       h1
+      //          @extend .thin-heading
+      //          margin-left: -4px
+      //          margin-bottom: 4px
+      //       +media($tablet)
+      //          padding: 15px 20px 0px
+
    #articles-intro-section
       @extend .intro-section
-      background: $section-bg-4
+      background: $section-bg-3
       .wrapper
          section
             color: $light-text
             padding: 15px 40px 0px
             h1
-               @extend .thin-heading
+               // @extend .thin-heading
                margin-left: -4px
                margin-bottom: 4px
             +media($tablet)
                padding: 15px 20px 0px
 
+
    #articles-section
-      padding: 10px 0
-      +span-columns(12)
-      background: #fff
+      padding: 10px 30px
+      min-height: 70vh
+      +media($tablet)
+         padding: 10px
+      // background: #aaa
       display: flex
       flex-direction: column
       align-items: center
 
       .article
-         +span-columns(11)
-         min-height: (100px)
-         background: #ddd
-         margin: 10px
+         +span-columns(12)
+         min-height: 100px
+         background: $media-box-bg
+         margin: 10px 2px
+         padding: 10px
          box-shadow: 1px 0px 2px #999
          h3
-            color: $semi-dark-gray
-            text-align: left
-            padding-bottom: 2px
-            font-size: 20px
-            margin: 0 0 0px
+            @extend .thick-heading
+            font-size: 1.4em
+            margin: 0px 0px
+            display: inline-block
+            i
+               font-size: 1.2em
+               color: $accent-color
+               position: relative
+               top: -2px
+               margin-right: 4px
+               // left: -6px
          hr
-            margin: 10px 0
-            &:nth-child(2)
-               display: black
-               margin: 5px 0
-
+            margin: 4px 0px 8px
+            padding: 0px
+            // margin: 10px 2px
+            height: 1px
+            border-width: 0
+            color: $accent-color
+            background-color: $accent-color
+            // padding: 0px
+            // &:nth-child(2)
+            //    display: black
+            //    margin: 5px 0
+         i
+            // font-size: 1.4em
+            // position: relative
+            // top: -2px
          h4
             font-weight: $bold
             color: $medium-gray
             padding-top: 0px
-            border-bottom: 4px solid $orange
-            display: inline-block
-            margin-right: 3px
-
+            // border-bottom: 4px solid $orange
+            // display: inline-block
+            margin: 5px 0px 5px
          a
-            font-size: 30px
-            color: black
-            float: right
-
-
+            color: $accent-color
          .abstract
             display: flex
-            flex-direction: row
-            flex-wrap: wrap
+            margin-bottom: 0px
             p
                padding-left: 2px
                margin-bottom: 20px
-               word-wrap: break-word
                color: black
