--- a/assets/css/4-page-layouts/_post.sass
+++ b/assets/css/4-page-layouts/_post.sass
@@ -3,9 +3,10 @@
    width: 60%
    margin: auto
    padding: 20px 10px
+   
 
 .post-parent
-   // background: honeydew
+   background: honeydew
    padding: 20px auto
    div
       margin: 20px auto 10px
