--- a/assets/css/4-page-layouts/_posts.sass
+++ b/assets/css/4-page-layouts/_posts.sass
@@ -2,13 +2,15 @@
    @extend .intro-section
    background: $dark-blue
 .posts
+   min-height: 100vh
    .wrapper
       .post
-         // width: 96%
          margin-left: 0px
+         min-height: 10vh
 .wrapper
    .post
       // margin-left: 0px
+      min-height: 70vh
       padding-left: 40px
       +media($tablet)
          padding-left: 19px
