--- a/assets/css/2-base/_typography.scss
+++ b/assets/css/2-base/_typography.scss
@@ -49,10 +49,10 @@ p {
    // font-weight: 400;
 }
 .p-section{
-   font-size: 20px;
+   font-size: 1.3em;
    font-weight: 200;
    @media (max-width: $large-screen) {
-      font-size: 18px;
+      font-size: 1.2em;
    }
 }
 
@@ -93,6 +93,9 @@ a.category-link{
    display: inline-block;
    margin-right: 3px;
    // text-transform: uppercase;
+   &:hover{
+      cursor: pointer;
+   }
    &.math-link{
       border-color: $green;
    }
