--- a/assets/css/4-page-layouts/_contact.sass
+++ b/assets/css/4-page-layouts/_contact.sass
@@ -1,47 +1,64 @@
-
+#contact-anchor
+   display: block
+   position: relative
+   top: -$header-height
+   +media($tablet)
+      top: -$tablet-header-height 
+   visibility: hidden
 .contact
-   @extend .intro-section
-   background: darken($section-bg-4, 0)
-   .section-parent
-      position: relative
-      // top: 10px
-      color: $light-text
-      background: $section-bg-0
-
-
    #contact-intro-section
       @extend .intro-section
-      background: darken($section-bg-3, 0)
+      background: darken($section-bg-5, 0)
+      padding: 0 0 20px
       .wrapper
          section
             color: $light-text
             padding: 20px 40px 0px
+            h1
+               // margin-bottom: 10px
             p
+               width: 90%
                @extend .p-section
-            //h1
-               @extend .thin-heading
-               margin-left: -4px
-               margin-bottom: 4px
+               margin-bottom: 8px
+               .contact-email
+                  color: $link-color
 
             ul
                list-style: circle
                text-align: left
                list-style-position: inside
+               margin: 0
+               padding: 0
                li
+                  @extend .p-section
                   font:
-                     size: 23px
-                     weight: 100
+                     // size: 23px
+                     // weight: 100
                   strong
                      font-weight: bold
 
             +media($tablet)
                padding: 15px 20px 0px
+   .contact-big-img
+      background: $white
+      background:
+         // image: url("http://7-themes.com/data_images/out/8/6793648-free-peaceful-wallpaper.jpg")
+         size: cover
+         position: 0% 55%
+      width: 100%
+      height: 30vh
+      .overlay
+         display: none
+         background: fade-out($medium-teal, 0.4)
+         +size(100%)
+         // height: 20vh
 
    #contact-section
       padding: 10px 0
       +span-columns(12)
       background: #fff
       display: flex
+      display: none
       flex-direction: column
       align-items: center
 
