--- a/assets/css/4-page-layouts/_header.sass
+++ b/assets/css/4-page-layouts/_header.sass
@@ -84,8 +84,14 @@ header
 
             li
                +flex(1)
+               &:nth-child(1)
+                  +flex(1)
+                  +media($tablet)
+                     +flex(0.9)
                &:nth-child(3)
                   +flex(1.4)
+                  +media($tablet)
+                     +flex(1.9)
                   a
                      // line-height: 1.2
                      // // margin: 0px null 0px
@@ -93,8 +99,7 @@ header
                      // font-size: 1.0em
                      // +media($tablet)
                      //    font-size: 0.8em
-               a
-
+               a    
                   border-bottom: 12px $header-bg solid
                   padding: 16px 0 10px
                   +transition
@@ -109,11 +114,13 @@ header
                   // min-height: $header-height
                   color: $header-color
                   font:
-                     size: 1.1em
+                     size: 1.0em
                      weight: $bold
+                  letter-spacing: 1.0px
 
                   +media($tablet)
-                     font-size: 0.9em
+                     font-size: 0.8em
+                     letter-spacing: 0.87px
                      height: $tablet-header-height
 
                   &:hover
