--- a/assets/css/4-page-layouts/_index.sass
+++ b/assets/css/4-page-layouts/_index.sass
@@ -203,6 +203,7 @@
 
                            margin-bottom: 16px
                            margin-left: 20px
+                           font-size: 1.4em
                            p
                               color: $dark-text
                      .manifest
@@ -216,6 +217,7 @@
                               margin-bottom: 36px
                            p
                               @extend .p-section
+                              display: inline
                               color: $dark-text
                               font-size: 0.9em
                               margin: 0
@@ -240,14 +242,22 @@
                      background: $white
                      margin: auto 0px
                      width: 100%
-                     height: 132px
+                     min-height: 138px
+                     height: 138px
+                     +media($tablet)
+                        min-height: 96px
+                        height: 96px
+
                      // box-shadow: -2px 1px 4px #333
                      background:
                         image: url("/assets/img/logos/etg.png")
                         size: contain
                         repeat: no-repeat
                         position: 50% 50%
-
+               +media($tablet)
+                  .content-box
+                     .img
+                        height: 60px
 
 #children-computer-parent
 
