--- a/assets/css/4-page-layouts/_recommendation.sass
+++ b/assets/css/4-page-layouts/_recommendation.sass
@@ -33,14 +33,16 @@
          // +flex-grow(1)
       .info
          // background: fade-out(lightblue, 0.7)
-         padding: 10px
+         padding: 10px 0px
          ul
+            position: relative
+            // left: -10px
             list-style-type: circle
-            // list-style-position: inside
+            list-style-position: inside
             li
                color: $accent-color
                margin-bottom: 16px
-               margin-left: 20px
+               // margin-left: 20px
                p
                   color: $dark-text
          .link-p
