--- a/assets/css/4-page-layouts/_recommendations.sass
+++ b/assets/css/4-page-layouts/_recommendations.sass
@@ -121,7 +121,9 @@
                   min-height: 40px
                   margin-bottom: 0px
                   padding: 4px 8px 6px 15px
-
+                  i
+                     margin-left: 6px
+                     display: none
                   border:
                      color: $theme-link-color
                      width: 4px
