--- a/_includes/footer2.html
+++ b/_includes/footer2.html
@@ -31,7 +31,7 @@
          </span>
          |
          <span class="footer-span">
-            kontakt@edutech.se
+            <A HREF="mailto:kontakt@edutech.se">kontakt@edutech.se</A>
          </span>
       </p>
       <hr>
