--- a/assets/css/4-page-layouts/_themes.sass
+++ b/assets/css/4-page-layouts/_themes.sass
@@ -27,7 +27,8 @@ $theme-link-color: fade-out($dark-text, 0.2)
          padding: 10px
          position: relative
          div
-            min-height: 200px
+            // background: red
+            min-height: 230px
             +span-columns(6)
          .img-holder
             +clearfix
@@ -50,27 +51,29 @@ $theme-link-color: fade-out($dark-text, 0.2)
                color: $semi-dark-gray
                text-align: left
                padding-bottom: 2px
-               font-size: 20px
+               font-size: 1.3em
                margin: 0 0 0px
                span
                   color: lighten($dark-text, 10)
                   font:
-                     size: 18px
+                     size: 0.9em
                      weight: $thin
                padding-top: 0px
             p
                padding-left: 2px
-               // margin-bottom: 50px
+               margin-bottom: 50px
                word-wrap: break-word
+               overflow: hidden
             a
 
-               display: none
+               // display: none
                position: absolute
                bottom: 10px
                right: 10px
                width: calc(50% - 22px)
                color: $theme-link-color
                text-align: center
+
                font:
                   size: 1.2em
                   weight: $bold
@@ -80,11 +83,15 @@ $theme-link-color: fade-out($dark-text, 0.2)
                   color: darken($theme-link-color,80%)
                   background: darken($media-box-bg,4%)
                div
+                  p
+                     // position: relative
+                     i
+                        margin-left: 10px
                   width: 100%
                   min-height: 40px
+                  height: 44px
                   margin-bottom: 0px
-                  padding: 4px 8px 6px 15px
-
+                  padding: 4px 8px 4px 4px
                   border:
                      color: $theme-link-color
                      width: 4px
