small fixes in print theme

--- a/assets/css/4-page-layouts/_index.sass
+++ b/assets/css/4-page-layouts/_index.sass
@@ -246,6 +246,8 @@
          position: relative
          +display(flex)
          min-height: 530px
+         +media($tablet)
+            min-height: 480px
          height: 100%
          +justify-content(center)
          // flex-end knas i ie11??
