--- a/assets/css/4-page-layouts/_themes.sass
+++ b/assets/css/4-page-layouts/_themes.sass
@@ -1,7 +1,7 @@
 $theme-link-color: fade-out($dark-text, 0.2)
 #themes-intro-section
    @extend .intro-section
-   background: darken($section-bg-5, 0)
+   background: darken($section-bg-3, 0)
 
 #themes-section
    background: $white
@@ -27,7 +27,9 @@ $theme-link-color: fade-out($dark-text, 0.2)
          position: relative
          div
             // background: red
-            min-height: 230px
+            min-height: 260px
+            +media($tablet)
+               min-height: 180px
             +span-columns(6)
          .img-holder
             +clearfix
@@ -41,7 +43,6 @@ $theme-link-color: fade-out($dark-text, 0.2)
                margin-top: 0px
                background:
                   size: cover
-                  // image: url("http://www.fillmurray.com/700/700")
                   position: 50% 50%
          .info
             +shift(6)
@@ -63,6 +64,7 @@ $theme-link-color: fade-out($dark-text, 0.2)
                padding-left: 2px
                margin-bottom: 50px
                word-wrap: break-word
+               //hyphens: 
                overflow: hidden
             a
 
