--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -14,6 +14,7 @@
             <h1>
                {{ page.title}}
             </h1>
+            <div id="theme-print-logo"> lilla logotypen</div>
             <hr>
             <h4>
                {{ page.short }}
