--- a/assets/css/3-modules/_links.scss
+++ b/assets/css/3-modules/_links.scss
@@ -31,7 +31,7 @@ a.category-link{
    font-weight: $bold;
    color: $medium-gray;
    padding-top: 0px;
-   border-bottom: 4px solid $orange;
+   border-bottom: 4px solid $light-gray;
    display: inline-block;
    margin-right: 3px;
    // text-transform: uppercase;
